# PdcaFinalProj

./: .gitignore  README.md  config.py  game_optimization_project.ipynb  gamedb.db  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/db/: __init__.py  dbinit.py
src/routers/: __init__.py
src/routers/default/: __init__.py  hello_world.py
src/routers/game/: endpoints.py
src/routers/move/: endpoints.py
src/utils/: __init__.py  connect_four.py  my_game.py  tic_tac_toe.py
src/utils/base/: my_game.py
src/views/game/: __init__.py  create_game.py  read_game.py  update_game_winner.py
src/views/move/: __init__.py  create_move.py  position.py  read_move.py
