[project]
name = "lidwellpdcafinalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.0",
    "jupyter>=1.1.1",
    "pip>=24.3.1",
    "polars>=1.16.0",
    "pydantic>=2.10.3",
    "sqlalchemy>=2.0.36",
]
